# auto-expert-report

./: .clinerules  .gitignore  .pre-commit-config.yaml  README.md  package.json  pyproject.toml  requirements.txt  ruff.toml  tailwind.config.js
assets/: input.css  tailwind.css
docs/: parser.md  visualizer.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
studyguide/: api_client.py  config.py  logging_config.py  parser.py  visualizer.py
tests/unit/: test_api_client.py  test_config.py  test_logging_config.py  test_parser.py  test_visualizer.py
